--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ license = "GPL-3.0-or-later OR Apache-2.0"
 homepage = "https://github.com/rcore-os/arceos"
 repository = "https://github.com/rcore-os/arceos/tree/main/crates/ratio"
 documentation = "https://rcore-os.github.io/arceos/ratio/index.html"
+keywords = ["Starry"]
 
 [dependencies]
